2009-07-18 Borut Razem <borut.razem AT siol.net>

	* src/SDCCasm.c: RFE #1204438 - make SDCC a multicall binary, 
	  fixed for WIN32
	* as/link/lkar.c: fixed bug 2817508 - double free or memory corruption
	  in aslink

2009-07-15 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/SDCCmain.c: make SDCC a multicall binary, RFE #1204438,
	  allows choosing the port by renaming the sdcc binary
	  (to f.e. z80-sdcc) or by calling SDCC from a suitable link
	  (parameter -m takes precedence)
	* src/SDCCglue.c: be more verbose about constants in code space

2009-07-07 Raphael Neider <rneider AT web.de>

	* src/pic16/device.c (find_in_list): ignore case during device
	  selection, fixes #2816817

2009-06-24 Raphael Neider <rneider AT web.de>

	* src/pic/ralloc.c (pic14_assignRegisters): avoid incorrect register
	  reuse among functions (fixes #2810015), cosmetic changes

2009-06-22 Raphael Neider <rneider AT web.de>

	* device/include/pic16/adc.h,
	  device/include/pic16/pic16devices.txt,
	  device/include/pic16/pic18f1[34]k50.h,
	  device/include/pic16/pic18f[24][456]j50.h,
	  device/include/pic16/pic18f[68][56]27.h,
	  device/include/pic16/pic18f[68][67]22.h,
	  device/include/pic16/pic18fregs.h,
	  device/lib/pic16/libdev/Makefile.am,
	  device/lib/pic16/libdev/pic18f1[34]k50.c,
	  device/lib/pic16/libdev/pic18f[24][456]j50.c,
	  device/lib/pic16/libdev/pic18f[68][56]27.c,
	  device/lib/pic16/libdev/pic18f[68][67]22.c,
	  device/lib/pic16/libio/Makefile.am,
	  device/lib/pic16/libio/adc/adcbusy.c,
	  device/lib/pic16/libio/adc/adcopen.c,
	  device/lib/pic16/libio/adc/adcsetch.c,
	  device/lib/pic16/libio/i2c/i2copen.c,
	  device/lib/pic16/pics.all,
	  doc/sdccman.lyx: added families 18f1[34]k50 (#2783178),
	    18f[24][456]j50 (#2794505), and 18f[68][56]27/18f[68][67]22
	* device/lib/pic16/aclocal.m4,
	  device/lib/pic16/configure,
	  device/lib/pic16/Makefile.in,
	  device/lib/pic16/debug/Makefile.in,
	  device/lib/pic16/libc/Makefile.in,